Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,6 +1,6 @@
 variables:
   azureSubscription: 'abissac'
-  resourcegroup: 'TailwindTraderWeb'
+  resourcegroup: 'TailwindTraderWeb2'
   location: 'East US'
   ImageName: website
 
